--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
   </head>
   <body>
     <footer class="footer">
-      <h3 class="footer-title">®TESLA</h3>
-
-      <div class="footer-social-icons">
-        <div class="icon-box">
-          <img src="facebook.png" alt="Facebook" />
+      <div class="footer-container">
+        <!-- Columna 1 -->
+        <div class="footer-col">
+          <img src="UPC.png" alt="Logo" class="footer-logo" />
+          <p class="footer-name">UPC</p>
+          <p class="footer-copy">© 2025 Todos los derechos reservados</p>
         </div>
 
-        <div class="icon-box">
-          <img src="img/twitter.png" alt="Twitter" />
+        <!-- Columna 2 -->
+        <div class="footer-col">
+          <h3 class="footer-title">Legal</h3>
+          <ul class="footer-list">
+            <li><a href="#">Política de Privacidad</a></li>
+            <li><a href="#">Términos y Condiciones</a></li>
+            <li><a href="#">Protección de Datos</a></li>
+          </ul>
         </div>
 
-        <div class="icon-box">
-          <img src="img/pinterest.png" alt="Pinterest" />
-        </div>
-
-        <div class="icon-box">
-          <img src="img/instagram.png" alt="Instagram" />
-        </div>
-
-        <div class="icon-box">
-          <img src="img/youtube.png" alt="YouTube" />
+        <!-- Columna 3 -->
+        <div class="footer-col">
+          <h3 class="footer-title">Síguenos</h3>
+          <div class="footer-social">
+            <a href="#"><img src="facebook.png" alt="Facebook" /></a>
+            <a href="#"><img src="img/twitter.png" alt="Twitter" /></a>
+            <a href="#"><img src="img/linkedin.png" alt="LinkedIn" /></a>
+            <a href="#"><img src="img/red.png" alt="Red" /></a>
+          </div>
         </div>
       </div>
     </footer>
